; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-mt7621.c_mtk_i2c_master_stop.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-mt7621.c_mtk_i2c_master_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_i2c = type { i64 }

@SM0CTL1_STOP = common dso_local global i32 0, align 4
@SM0CTL1_TRI = common dso_local global i32 0, align 4
@REG_SM0CTL1_REG = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mtk_i2c*)* @mtk_i2c_master_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtk_i2c_master_stop(%struct.mtk_i2c* %0) #0 {
  %2 = alloca %struct.mtk_i2c*, align 8
  store %struct.mtk_i2c* %0, %struct.mtk_i2c** %2, align 8
  %3 = load i32, i32* @SM0CTL1_STOP, align 4
  %4 = load i32, i32* @SM0CTL1_TRI, align 4
  %5 = or i32 %3, %4
  %6 = load %struct.mtk_i2c*, %struct.mtk_i2c** %2, align 8
  %7 = getelementptr inbounds %struct.mtk_i2c, %struct.mtk_i2c* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @REG_SM0CTL1_REG, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @iowrite32(i32 %5, i64 %10)
  %12 = load %struct.mtk_i2c*, %struct.mtk_i2c** %2, align 8
  %13 = call i32 @mtk_i2c_wait_idle(%struct.mtk_i2c* %12)
  ret i32 %13
}

declare dso_local i32 @iowrite32(i32, i64) #1

declare dso_local i32 @mtk_i2c_wait_idle(%struct.mtk_i2c*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
